# mcp-cross-chain

./: .gitmodules  README.md
docs/: implementation-plan.md  mpc-cross-chain-architecture.md  mpc-crosschain-solution.md  pkp-enhanced-design.md  smart-condition-engine-design.md  technical-specification.md
genius-actions/: package.json
genius-contracts/: .gitmodules  deploy_fee_collector.sh  foundry.toml  remappings.txt
genius-contracts-solana/: Anchor.toml
ju-actions/: .eslintrc.js  .gitignore  README.md  esbuild.config.js  jest.config.js  package-lock.json  tsconfig.json
ju-contracts/: .gitignore  README.md  change_admin_ownership.sh  foundry.toml  todo.txt
ju-contracts-solana/: Anchor.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
ju-contracts-solana/programs/genius/: Cargo.toml
ju-contracts-solana/programs/genius/src/: constant.rs  lib.rs
ju-contracts-solana/programs/genius/src/instructions/: accept_authority.rs  add_global_state_authority.rs  fill_order.rs  remove_bridge_liquidity.rs  revert_order.rs  set_target_chain_min_fee.rs
ju-contracts-solana/programs/ju/: Cargo.toml
ju-contracts-solana/programs/ju/src/: constant.rs  error.rs  lib.rs  state.rs  util.rs
ju-contracts-solana/programs/ju/src/instructions/: claim_fees.rs  nominate_authority.rs  remove_global_state_authority.rs  remove_orchestrator.rs
ju-services/: .env.example  README-MICROSERVICES.md  README.md  SETUP_GUIDE.md  worker-configuration.d.ts
off-chain-serverlss/: README-MICROSERVICES.md  README.md  SETUP_GUIDE.md  deploy-microservices.sh  package.json  (+6 more)
(+280 files in other folders)
